New Model Illustrious

--- a/AnimeWebUI.ipynb
+++ b/AnimeWebUI.ipynb
@@ -24,21 +24,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "_cRmoHmYPcoD"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#@title 🚀 `Launch web UI`\n",
     "\n",
     "#@markdown ### ⭐ Model selection <sup>[**[?]**](https://github.com/NUROISEA/anime-webui-colab/wiki/Selecting-a-model)</sup>\n",
     "#@markdown <small> It could take 4-7 minutes to see a link to the web UI, please be patient! :) </small>\n",
-    "model = \"Animagine-XL 4.0 (SDXL)\" # @param [\"Animagine-XL 4.0 (SDXL)\",\"Stable Diffusion 3.5 Large (SD3)\",\"Stable Diffusion XL (SDXL)\",\"FLUX.1-dev (FLUX)\",\"Hassaku XL (SDXL)\",\"WAI-NSFW-illustrious-SDXL (Illustrious)\",\"Unholy Desire Mix (SDXL)\",\"JANKU v4 NSFW Trained + NoobAI EPS + RouWei Illustrious XL (Illustrious)\",\"Nova Anime XL (SDXL)\"]\n",
+    "model = \"Animagine-XL 4.0 (SDXL)\" # @param [\"Animagine-XL 4.0 (SDXL)\",\"Stable Diffusion 3.5 Large (SD3)\",\"Stable Diffusion XL (SDXL)\",\"FLUX.1-dev (FLUX)\",\"Hassaku XL (SDXL)\",\"WAI-NSFW-illustrious-SDXL (Illustrious)\",\"Unholy Desire Mix (SDXL)\",\"JANKU v4 NSFW Trained + NoobAI EPS + RouWei Illustrious XL (Illustrious)\",\"Nova Anime XL (SDXL)\",\"Hyphoria [Illu & NAI] (Illustrious)\"]\n",
     "\n",
     "#@markdown ### 🎨 LoRA selection - Detailer <sup>[**[?]**](https://github.com/NUROISEA/anime-webui-colab/wiki/Using-LoRAs)</sup>\n",
     "#@markdown <small> LoRAs that enhance image quality and details </small>\n",
-    "detailer_lora_1 = \"None\" #@param [\"None\",\"TrendCraft (SDXL Base)\",\"TrendCraft (Noob/Illustrious Base)\"]\n",
-    "detailer_lora_2 = \"None\" #@param [\"None\",\"TrendCraft (SDXL Base)\",\"TrendCraft (Noob/Illustrious Base)\"]\n",
+    "detailer_lora_1 = \"None\" #@param [\"None\",\"TrendCraft (SDXL Base)\",\"TrendCraft (Noob/Illustrious Base)\",\"Detailer Concept\",\"Detailer IL Concept\"]\n",
+    "detailer_lora_2 = \"None\" #@param [\"None\",\"TrendCraft (SDXL Base)\",\"TrendCraft (Noob/Illustrious Base)\",\"Detailer Concept\",\"Detailer IL Concept\"]\n",
     "\n",
     "#@markdown ### 🎭 LoRA selection - Style <sup>[**[?]**](https://github.com/NUROISEA/anime-webui-colab/wiki/Using-LoRAs)</sup>\n",
     "#@markdown <small> LoRAs that change the artistic style </small>\n",
@@ -47,8 +45,8 @@
     "\n",
     "#@markdown ### 🎬 LoRA selection - Actions <sup>[**[?]**](https://github.com/NUROISEA/anime-webui-colab/wiki/Using-LoRAs)</sup>\n",
     "#@markdown <small> LoRAs for poses, actions, and specific movements </small>\n",
-    "action_lora_1 = \"None\" #@param [\"None\",\"DX888-Actions\",\"Tucking Hair\",\"Jack-O Challenge\",\"Pole Dancing\",\"All Fours\",\"Playing with own hair\",\"Smoking\"]\n",
-    "action_lora_2 = \"None\" #@param [\"None\",\"DX888-Actions\",\"Tucking Hair\",\"Jack-O Challenge\",\"Pole Dancing\",\"All Fours\",\"Playing with own hair\",\"Smoking\"]\n",
+    "action_lora_1 = \"None\" #@param [\"None\",\"DX888-Actions\",\"Tucking Hair\",\"Jack-O Challenge\",\"Pole Dancing\",\"All Fours\",\"Playing with own hair\",\"Smoking\",\"Jonathan Joestar's\"]\n",
+    "action_lora_2 = \"None\" #@param [\"None\",\"DX888-Actions\",\"Tucking Hair\",\"Jack-O Challenge\",\"Pole Dancing\",\"All Fours\",\"Playing with own hair\",\"Smoking\",\"Jonathan Joestar's\"]\n",
     "\n",
     "#@markdown ### 🛠️ LoRA selection - Tools/Utility <sup>[**[?]**](https://github.com/NUROISEA/anime-webui-colab/wiki/Using-LoRAs)</sup>\n",
     "#@markdown <small> LoRAs for technical utilities and visual effects </small>\n",
@@ -57,8 +55,8 @@
     "\n",
     "#@markdown ### 👥 LoRA selection - Characters <sup>[**[?]**](https://github.com/NUROISEA/anime-webui-colab/wiki/Using-LoRAs)</sup>\n",
     "#@markdown <small> LoRAs for specific characters </small>\n",
-    "character_lora_1 = \"Edelgard von Hresvelg\" #@param [\"None\",\"Edelgard von Hresvelg\",\"Shadowheart\",\"Pose\"]\n",
-    "character_lora_2 = \"None\" #@param [\"None\",\"Edelgard von Hresvelg\",\"Shadowheart\",\"Pose\"]\n",
+    "character_lora_1 = \"Edelgard von Hresvelg\" #@param [\"None\",\"Edelgard von Hresvelg\",\"Shadowheart\"]\n",
+    "character_lora_2 = \"None\" #@param [\"None\",\"Edelgard von Hresvelg\",\"Shadowheart\"]\n",
     "\n",
     "#@markdown ### 👗 LYCORIS selection - Clothing <sup>[**[?]**](https://github.com/NUROISEA/anime-webui-colab/wiki/Using-LoRAs)</sup>\n",
     "#@markdown <small> LYCORIS models for clothing and outfits </small>\n",
@@ -98,9 +96,10 @@
     "  \"FLUX.1-dev\": \"FLUX\",\n",
     "  \"Hassaku XL\": \"SDXL\",\n",
     "  \"WAI-NSFW-illustrious-SDXL\": \"Illustrious\",\n",
-    "  \"Unholy Desire Mix\": \"SDXL\",\n",
+    "  \"Unholy Desire Mix\": \"Illustrious\",\n",
     "  \"JANKU v4 NSFW Trained + NoobAI EPS + RouWei Illustrious XL\": \"Illustrious\",\n",
-    "  \"Nova Anime XL\": \"SDXL\"\n",
+    "  \"Nova Anime XL\": \"SDXL\",\n",
+    "  \"Hyphoria [Illu & NAI]\": \"Illustrious\"\n",
     "}\n",
     "\n",
     "# Updated model dictionary (clean names)\n",
@@ -116,7 +115,8 @@
     "  \"WAI-NSFW-illustrious-SDXL\" : \"1367422\",\n",
     "  \"Unholy Desire Mix\" : \"1723898\",\n",
     "  \"JANKU v4 NSFW Trained + NoobAI EPS + RouWei Illustrious XL\" : \"1772645\",\n",
-    "  \"Nova Anime XL\" : \"1854228\"\n",
+    "  \"Nova Anime XL\" : \"1854228\",\n",
+    "  \"Hyphoria [Illu & NAI]\" : \"1805971\"\n",
     "}\n",
     "\n",
     "# Embeddings collection - Enhanced compatibility (most embeddings work across architectures)\n",
@@ -150,6 +150,20 @@
     "    \"id\": \"1809575\",\n",
     "    \"compatible_bases\": [\"Illustrious\"],  # Specifically for Illustrious/Noob models\n",
     "    \"description\": \"🔧 Enhances trending anime styles and details for Illustrious architecture\",\n",
+    "    \"category\": \"detailer\",\n",
+    "    \"priority\": \"medium\"\n",
+    "  },\n",
+    "  \"Detailer Concept\": {\n",
+    "    \"id\": \"1191626\",\n",
+    "    \"compatible_bases\": [\"Illustrious\"],\n",
+    "    \"description\": \"🔧 Detailer Concept LoRA for Illustrious base (from CivitAI)\",\n",
+    "    \"category\": \"detailer\",\n",
+    "    \"priority\": \"medium\"\n",
+    "  },\n",
+    "  \"Detailer IL Concept\": {\n",
+    "    \"id\": \"1736373\",\n",
+    "    \"compatible_bases\": [\"Illustrious\"],\n",
+    "    \"description\": \"🔧 Detailer IL Concept LoRA for Illustrious base (from CivitAI)\",\n",
     "    \"category\": \"detailer\",\n",
     "    \"priority\": \"medium\"\n",
     "  }\n",
@@ -259,6 +273,13 @@
     "    \"description\": \"🎬 Smoking poses and gestures for SDXL\",\n",
     "    \"category\": \"action\",\n",
     "    \"priority\": \"low\"\n",
+    "  },\n",
+    "  \"Jonathan Joestar's\": {\n",
+    "    \"id\": \"1778951\",\n",
+    "    \"compatible_bases\": [\"Illustrious\", \"SDXL\"],\n",
+    "    \"description\": \"🎬 JoJo's Bizarre Adventure character poses - Dynamic action poses\",\n",
+    "    \"category\": \"action\",\n",
+    "    \"priority\": \"low\"\n",
     "  }\n",
     "}\n",
     "\n",
@@ -341,13 +362,6 @@
     "    \"id\": \"1542158\",\n",
     "    \"compatible_bases\": [\"Illustrious\", \"SDXL\"],\n",
     "    \"description\": \"👥 Baldur's Gate 3 character - Shadowheart\",\n",
-    "    \"category\": \"character\",\n",
-    "    \"priority\": \"low\"\n",
-    "  },\n",
-    "  \"Pose\": {\n",
-    "    \"id\": \"1778951\",\n",
-    "    \"compatible_bases\": [\"Illustrious\", \"SDXL\"],\n",
-    "    \"description\": \"👥 Dynamic pose LoRA - Various character poses\",\n",
     "    \"category\": \"character\",\n",
     "    \"priority\": \"low\"\n",
     "  }\n",
@@ -780,34 +794,37 @@
     "    filename = os.path.basename(filepath).lower()\n",
     "    \n",
     "    # Determine appropriate minimum size based on file type\n",
-    "    if 'embed' in filename or filepath.endswith('.pt'):\n",
+    "    if 'embed' in filename or filepath.endswith('.pt') or '/embeddings/' in filepath:\n",
     "        # Embeddings are typically much smaller (100KB - 1MB)\n",
-    "        min_size_bytes = 50 * 1024  # 50KB minimum for embeddings\n",
+    "        # Just check if file exists and has some content\n",
+    "        if file_size > 1024:  # At least 1KB\n",
+    "            print(f\"✅ Embedding file validated: {os.path.basename(filepath)} ({file_size} bytes)\")\n",
+    "            return True\n",
+    "        else:\n",
+    "            print(f\"❌ Embedding file too small: {file_size} bytes\")\n",
+    "            return False\n",
     "    elif any(word in filename for word in ['lora', 'lyco']):\n",
     "        # LoRAs and LyCORIS can be smaller (20MB - 200MB)\n",
     "        min_size_bytes = 15 * 1024 * 1024  # 15MB minimum for LoRAs\n",
     "    elif filepath.endswith(('.zip', '.rar', '.7z')):\n",
     "        # Archive files vary widely\n",
     "        min_size_bytes = 10 * 1024 * 1024  # 10MB minimum for archives\n",
+    "        if file_size >= min_size_bytes:\n",
+    "            print(f\"✅ Archive file validated: {os.path.basename(filepath)}\")\n",
+    "            return True\n",
+    "        else:\n",
+    "            print(f\"❌ Archive file too small: {file_size} bytes (minimum: {min_size_bytes} bytes)\")\n",
+    "            return False\n",
     "    else:\n",
     "        # Default for models and other files\n",
     "        min_size_bytes = min_size_mb * 1024 * 1024\n",
     "\n",
+    "    # Check file size for non-embedding files\n",
     "    if file_size < min_size_bytes:\n",
     "        print(f\"❌ File too small: {file_size} bytes (minimum: {min_size_bytes} bytes)\")\n",
     "        return False\n",
     "\n",
-    "    # For archive files, just check size\n",
-    "    if filepath.endswith(('.zip', '.rar', '.7z')):\n",
-    "        print(f\"✅ Archive file validated: {os.path.basename(filepath)}\")\n",
-    "        return True\n",
-    "\n",
-    "    # For embeddings, check if it's a valid tensor file\n",
-    "    if 'embed' in filename or filepath.endswith('.pt'):\n",
-    "        print(f\"✅ Embedding file validated: {os.path.basename(filepath)}\")\n",
-    "        return True\n",
-    "\n",
-    "    # Check if it's a valid safetensors file\n",
+    "    # Check if it's a valid safetensors file (for models and LoRAs)\n",
     "    try:\n",
     "        with open(filepath, 'rb') as f:\n",
     "            header = f.read(100)\n",
@@ -818,6 +835,7 @@
     "        print(f\"❌ Error reading file: {e}\")\n",
     "        return False\n",
     "\n",
+    "    print(f\"✅ File validated: {os.path.basename(filepath)}\")\n",
     "    return True\n",
     "\n",
     "def fix_downloaded_files(directory):\n",
@@ -869,7 +887,7 @@
     "\n",
     "    print(f\"📁 Found file: {filename}\")\n",
     "\n",
-    "    # Validate with automatic file type detection\n",
+    "    # Validate with automatic file validation\n",
     "    if validate_file(latest_file):\n",
     "        print(f\"✅ Valid file: {filename}\")\n",
     "        return filename\n",
@@ -915,7 +933,7 @@
     "                downloaded_file = compatible_files[0]\n",
     "                filepath = os.path.join(directory, downloaded_file)\n",
     "\n",
-    "                # Use automatic file type validation\n",
+    "                # Use automatic file validation\n",
     "                if validate_file(filepath):\n",
     "                    print(f\"✅ Successfully downloaded: {downloaded_file}\")\n",
     "                    return downloaded_file\n",
@@ -989,15 +1007,46 @@
     "            return filename\n",
     "\n",
     "def safe_download_lora(lora_name, lora_info, lora_dir):\n",
-    "    \"\"\"Download LoRA with proper handling\"\"\"\n",
-    "\n",
-    "    # Ensure LoRA directory exists\n",
-    "    os.makedirs(lora_dir, exist_ok=True)\n",
+    "    \"\"\"Download LoRA/Embedding with proper handling and directory selection\"\"\"\n",
+    "    \n",
+    "    # Determine correct directory based on file type\n",
+    "    if 'embed' in lora_name.lower() or lora_info.get(\"category\") == \"embedding\":\n",
+    "        # Embeddings go to embeddings folder, not lora folder\n",
+    "        download_dir = f\"{utility.web_ui_folder}/embeddings\"\n",
+    "        print(f\"📖 Downloading to embeddings directory: {download_dir}\")\n",
+    "    else:\n",
+    "        # LoRAs and LYCORIS go to lora folder\n",
+    "        download_dir = lora_dir\n",
+    "        print(f\"🎨 Downloading to LoRA directory: {download_dir}\")\n",
+    "    \n",
+    "    # Ensure directory exists\n",
+    "    os.makedirs(download_dir, exist_ok=True)\n",
     "\n",
     "    # lora_info is now a dict with id and compatibility info\n",
     "    lora_id = lora_info[\"id\"]\n",
-    "    downloaded_filename = download_from_civitai(lora_id, lora_dir)\n",
+    "    downloaded_filename = download_from_civitai(lora_id, download_dir)\n",
     "    return downloaded_filename\n",
+    "\n",
+    "# Enhanced dependency management and error handling\n",
+    "def fix_dependencies():\n",
+    "    \"\"\"Fix known dependency conflicts\"\"\"\n",
+    "    print(\"🔧 Applying dependency fixes...\")\n",
+    "    \n",
+    "    try:\n",
+    "        # Fix httpx version conflict\n",
+    "        !pip install --quiet \"httpx>=0.28.1,<1.0.0\" --force-reinstall\n",
+    "        print(\"✅ httpx version updated\")\n",
+    "        \n",
+    "        # Fix protobuf if needed\n",
+    "        !pip install --quiet \"protobuf>=5.26.1\" --force-reinstall\n",
+    "        print(\"✅ protobuf version updated\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️  Dependency fix warning: {e}\")\n",
+    "        print(\"📝 Note: Some dependency conflicts may persist but shouldn't affect core functionality\")\n",
+    "\n",
+    "# Apply fixes before main execution\n",
+    "fix_dependencies()\n",
     "\n",
     "# Display compatibility info for selected model\n",
     "print(\"🔍 Analyzing model compatibility...\")\n",
@@ -1245,16 +1294,19 @@
     "        print(f\"  └ 📖 Downloading {embedding_name}...\")\n",
     "        print(f\"    📋 {embedding_info['description']}\")\n",
     "\n",
-    "        downloaded_embedding = safe_download_lora(embedding_name, embedding_info, f\"{utility.web_ui_folder}/embeddings\")\n",
+    "        # Use the corrected download function that routes to embeddings directory\n",
+    "        downloaded_embedding = safe_download_lora(embedding_name, embedding_info, f\"{utility.web_ui_folder}/models/Lora\")\n",
     "\n",
     "        if downloaded_embedding:\n",
     "            print(f\"  ✅ {embedding_name} downloaded as: {downloaded_embedding}\")\n",
     "        else:\n",
     "            print(f\"  ❌ Failed to download {embedding_name}\")\n",
+    "            print(f\"      📝 Troubleshooting: Check CivitAI API access and file permissions\")\n",
     "\n",
     "    print(f\"🎉 Embedding download process completed!\")\n",
     "else:\n",
     "    print(\"ℹ️  No compatible embeddings selected for download.\")\n",
+    "    print(\"💡 Tip: Embeddings like 'Lazy Embeddings Positive/Negative' can improve image quality!\")\n",
     "\n",
     "# Enhanced ControlNet info display\n",
     "if controlnet != \"none\":\n",
